refactor: 引入 StorageUtil 工具类统一插件存储路径管理